fix(sanar-ui): set letter spacing in typhography

--- a/packages/sanar-ui/src/Components/Atoms/Typography/style.less
+++ b/packages/sanar-ui/src/Components/Atoms/Typography/style.less
@@ -37,6 +37,7 @@
     }
     &--overline {
         font-size: @font-size-sm - 2px;
+        letter-spacing: 0.4px;
         line-height: 1.25;
         text-transform: uppercase;
     }
